tests/neg-custom-args/i9517.scala

def test():Unit = foo({ case 1 => 10 }) // error
def foo(x: Any): Boolean = true
